--- a/FightHazeBasic/templates/front.html
+++ b/FightHazeBasic/templates/front.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title> FightHaze</title>
+    <title> The Drunkards</title>
     <link href="../bootstrap/css/bootstrap.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="../stylesheets/main.css">
 </head>
@@ -30,7 +30,7 @@
         <div class="navbar-inner">
             <ul class="nav">
                 <li><a href="/">Home</a></li>
-		<li><a href="/pledge">Pledge</a></li>
+		<li><a href="/pledge">Stalls</a></li>
 		{% if user_nickname %}
 		<li><a href="/reminder">Reminder</a></li>
 		{% endif %}
@@ -41,17 +41,17 @@
 
     <div class="row-fluid">
         <div class="span8">
-            <figure><img src="../images/queue.jpg"><figcaption><br>Live updates</a> on queue data. Image source: the <a href="https://www.google.com.sg/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiwhoyxscXNAhXDMI8KHXk3DEMQjRwIBw&url=https%3A%2F%2Fwww.yelp.com.sg%2Fbiz%2Fnus-frontier-canteen-singapore&psig=AFQjCNF3M8b29JOhzbYyEdUIUdox-a26IQ&ust=1467019961855384" target="_blank">NUS Frontier Canteen</a>.</figcaption></figure>
+            <figure><img src="../images/queue.jpg"><figcaption><br>NUS Faculty of Science. Image source:<a href="https://www.google.com.sg/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwi_7qHItsXNAhUIwI8KHfvCAp8QjRwIBw&url=https%3A%2F%2Fwww.yelp.com.sg%2Fbiz%2Fnus-frontier-canteen-singapore&bvm=bv.125596728,d.c2I&psig=AFQjCNGU7XR7RL7zbYISTks4_M4uxuA2bA&ust=1467021354311307" target="_blank">Frontier Canteen</a>.</figcaption></figure>
         </div>
         <div class="span4">
             <div class="top-pad-one">
-                <p> Frustrated with the never ending haze? Want to do your part to fight the haze?</p>
+                <p> NEWS UPDATE: </p>
 
-                <p> Make a pledge to buy products that are certified for sustainability. Do your part to reduce the demand for non-sustainable products.</p>
+                <p> 20/12/2099</p>
 
-                <p> Make your pledge public on Facebook so that all people within <a href="https://en.wikipedia.org/wiki/Six_degrees_of_separation" target="_blank">6 degrees of separation</a> follow suit and take collective action.</p>
+                <p> Worried about waiting times in the canteen? Fret no more! With this web application, you can monitor the waiting times live!</p>
 
-		<p> For Stall-Holders and NUS administrators: Log in and edit/ update store details. </p>
+		<p> For Stallholders and NUS administrative staff: Log in to update/ edit store data.</p>
             </div>
         </div>
     </div>
