--- a/myproject/jumbotron/templates/about.html
+++ b/myproject/jumbotron/templates/about.html
@@ -64,41 +64,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <div class="image123">
-          <div class="imageContainer">
-            <img src="../images/queue.jpg" class="img-responsive" alt="Responsive image" width="30%" height=auto> 
-          </div>
-          <div class="imageContainer">
-            <img class="middle-img" src="../images/canteen.jpg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
-          </div>
-        </div>
-        <h1>The Drunkards</h1>
-        <p>This is a web application for NUS Orbital 2016 Project Gemini.</p>
-        <p><a class="btn btn-primary btn-lg" href="/about" role="button">About &raquo;</a></p>
-      </div>
-    </div>
-
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-md-4">
-          <h2 align="center">Store 1</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2 align="center">Store 2</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2 align="center">Store 3</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>
-
-      <hr>
+        <h1 align="center">About</h1>
+        <p align="left">We are a team of 2 working on a web application for NUS Orbital 2016 Project Gemini. Our team comprises of Low Yee Seng & Khoong Wei Hao.
+        </p>
 
       <footer>
         <p>&copy; 2015 Company, Inc.</p>
