--- a/myproject/jumbotron/templates/about.html
+++ b/myproject/jumbotron/templates/about.html
@@ -45,7 +45,7 @@
           <div class="span5">
               <img src="../images/nus.jpeg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
           </div> 
-          <a class="navbar-brand" href="http://orbital.comp.nus.edu.sg/?p=45"> NUS Orbital 2016 Project Gemini </a>
+          <a class="navbar-brand" href="index.html"> The Drunkards </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
@@ -65,7 +65,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1 align="center">About</h1>
-        <p align="left">We are a team of 2 working on a web application for NUS Orbital 2016 Project Gemini. Our team comprises of Low Yee Seng & Khoong Wei Hao.
+        <p align="left">We are a team of 2 working on a web application for <a href="http://orbital.comp.nus.edu.sg/?p=45">NUS Orbital 2016 Project Gemini</a>. Our team comprises of Low Yee Seng & Khoong Wei Hao.
         </p>
 
       <footer>
