--- a/myproject/jumbotron/templates/index.html
+++ b/myproject/jumbotron/templates/index.html
@@ -45,7 +45,7 @@
           <div class="span5">
               <img src="../images/nus.jpeg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
           </div> 
-          <a class="navbar-brand" href="http://orbital.comp.nus.edu.sg/?p=45"> NUS Orbital 2016 Project Gemini </a>
+          <a class="navbar-brand" href="/"> The Drunkards </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
@@ -74,7 +74,7 @@
         </div>
         <h1>The Drunkards</h1>
         <p>This is a web application for NUS Orbital 2016 Project Gemini.</p>
-        <p><a class="btn btn-primary btn-lg" href="/about" role="button">About &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="about.html" role="button">About &raquo;</a></p>
       </div>
     </div>
 
