--- a/myproject/jumbotron/templates/index.html
+++ b/myproject/jumbotron/templates/index.html
@@ -74,7 +74,7 @@
         </div>
         <h1>The Drunkards</h1>
         <p>This is a web application for NUS Orbital 2016 Project Gemini.</p>
-        <p><a class="btn btn-primary btn-lg" href="about.html" role="button">About &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="/about" role="button">About &raquo;</a></p>
       </div>
     </div>
 
@@ -84,7 +84,7 @@
         <div class="col-md-4">
           <h2 align="center">Store 1</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="stall1.html" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="/stall1" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2 align="center">Store 2</h2>
