--- a/myproject/jumbotron/templates/stall3.html
+++ b/myproject/jumbotron/templates/stall3.html
@@ -45,7 +45,7 @@
           <div class="span5">
               <img src="../images/nus.jpeg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
           </div> 
-          <a class="navbar-brand" href="/"> The Drunkards </a>
+          <a class="navbar-brand" href="index.html"> The Drunkards </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
@@ -64,17 +64,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <div class="image123">
-          <div class="imageContainer">
-            <img src="../images/queue.jpg" class="img-responsive" alt="Responsive image" width="30%" height=auto> 
-          </div>
-          <div class="imageContainer">
-            <img class="middle-img" src="../images/canteen.jpg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
-          </div>
-        </div>
-        <h1>The Drunkards</h1>
-        <p>This is a web application for NUS Orbital 2016 Project Gemini.</p>
-        <p><a class="btn btn-primary btn-lg" href="about.html" role="button">About &raquo;</a></p>
+        <h1 align="center">Stall 3</h1>
+        <p align="left">This is a web application for NUS Orbital 2016 Project Gemini.</p>
+        <p align="left"> Menu: </p>
       </div>
     </div>
 
@@ -82,19 +74,16 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2 align="center">Store 1</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="/stall1" role="button">View details &raquo;</a></p>
+          <h2 align="center">Items in queue:</h2>
+          <p>- </p>
         </div>
         <div class="col-md-4">
-          <h2 align="center">Store 2</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="/stall2" role="button">View details &raquo;</a></p>
+          <h2 align="center">Estimated waiting time (in minutes):</h2>
+          <p>0</p>
        </div>
         <div class="col-md-4">
-          <h2 align="center">Store 3</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="/stall3" role="button">View details &raquo;</a></p>
+          <h2 align="center">Special offers:</h2>
+          <p>-</p>
         </div>
       </div>
 
