--- a/myproject/jumbotron/templates/stall2.html
+++ b/myproject/jumbotron/templates/stall2.html
@@ -64,9 +64,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1 align="center">Stall 2</h1>
+        <h1 align="center">Salad Bar</h1>
         <p align="left">This is a web application for NUS Orbital 2016 Project Gemini.</p>
-        <p align="left"> Menu: </p>
+        <p align="left"> Menu: Ribeye Steak (Signature dish)</p>
       </div>
     </div>
 
