--- a/myproject/jumbotron/templates/stall3.html
+++ b/myproject/jumbotron/templates/stall3.html
@@ -64,7 +64,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1 align="center">Stall 3</h1>
+        <h1 align="center">Huang's</h1>
         <p align="left">This is a web application for NUS Orbital 2016 Project Gemini.</p>
         <p align="left"> Menu: </p>
       </div>
