--- a/myproject/jumbotron/templates/index.html
+++ b/myproject/jumbotron/templates/index.html
@@ -82,19 +82,19 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2 align="center">Store 1</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="/stall1" role="button">View details &raquo;</a></p>
+          <h2 align="center">Ayam Penyet</h2>
+          <p>Operating hours (term time): Mon – Fri: 0730 – 1600 (several stalls operate till 8pm), Sat: 0730 – 1500 </p>
+          <p><a class="btn btn-default" href="stall1" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2 align="center">Store 2</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="/stall2" role="button">View details &raquo;</a></p>
+          <h2 align="center">Salad Bar</h2>
+          <p>Operating hours: Mon to Fri: 0730 - 1600 Sat: 0730 - 1500 Closed on Sun. Contact: 6872 5845</p>
+          <p><a class="btn btn-default" href="stall2" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2 align="center">Store 3</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="/stall3" role="button">View details &raquo;</a></p>
+          <h2 align="center">Huang's</h2>
+          <p>Operating hours: Mon to Fri: 0800 - 1800</p>
+          <p><a class="btn btn-default" href="stall3.html" role="button">View details &raquo;</a></p>
         </div>
       </div>
 
