--- a/myproject/jumbotron/templates/index.html
+++ b/myproject/jumbotron/templates/index.html
@@ -74,7 +74,7 @@
         </div>
         <h1>The Drunkards</h1>
         <p>This is a web application for NUS Orbital 2016 Project Gemini.</p>
-        <p><a class="btn btn-primary btn-lg" href="about.html" role="button">About &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="about" role="button">About &raquo;</a></p>
       </div>
     </div>
 
@@ -94,7 +94,7 @@
         <div class="col-md-4">
           <h2 align="center">Huang's</h2>
           <p>Operating hours: Mon to Fri: 0800 - 1800</p>
-          <p><a class="btn btn-default" href="stall3.html" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="stall3" role="button">View details &raquo;</a></p>
         </div>
       </div>
 
