--- a/myproject/jumbotron/templates/stall1.html
+++ b/myproject/jumbotron/templates/stall1.html
@@ -45,7 +45,7 @@
           <div class="span5">
               <img src="../images/nus.jpeg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
           </div> 
-          <a class="navbar-brand" href="index.html"> The Drunkards </a>
+          <a class="navbar-brand" href="/"> The Drunkards </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
@@ -66,7 +66,7 @@
       <div class="container">
         <h1 align="center">Stall 1</h1>
         <p align="left">This is a web application for NUS Orbital 2016 Project Gemini.</p>
-        <p align="left"> Menu: </p>
+        <p align="left"> Menu: Dory Penyet $3.50, Ayam Penyet $4.00</p>
       </div>
     </div>
 
