--- a/myproject/jumbotron/templates/stall3.html
+++ b/myproject/jumbotron/templates/stall3.html
@@ -45,7 +45,7 @@
           <div class="span5">
               <img src="../images/nus.jpeg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
           </div> 
-          <a class="navbar-brand" href="index.html"> The Drunkards </a>
+          <a class="navbar-brand" href="/"> The Drunkards </a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
