--- a/myproject/jumbotron/templates/stall3.html
+++ b/myproject/jumbotron/templates/stall3.html
@@ -45,19 +45,8 @@
           <div class="span5">
               <img src="../images/nus.jpeg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
           </div> 
-          <a class="navbar-brand" href="/"> The Drunkards </a>
+          <a class="navbar-brand" href="/"> <font size="10" color="grey">The Drunkards</font> </a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
       </div>
     </nav>
 
@@ -66,7 +55,7 @@
       <div class="container">
         <h1 align="center">Huang's</h1>
         <p align="left">This is a web application for NUS Orbital 2016 Project Gemini.</p>
-        <p align="left"> Menu: </p>
+        <p align="left"> Menu: Kimchi Fried Rice $3.50, Chicken Bulgogi $4.00, Beef Bulgogi $4.50.</p>
       </div>
     </div>
 
