--- a/myproject/jumbotron/templates/about.html
+++ b/myproject/jumbotron/templates/about.html
@@ -45,19 +45,8 @@
           <div class="span5">
               <img src="../images/nus.jpeg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
           </div> 
-          <a class="navbar-brand" href="/"> The Drunkards </a>
+          <a class="navbar-brand" href="/"> <font size="10" color="grey">The Drunkards</font> </a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
       </div>
     </nav>
 
