--- a/myproject/jumbotron/templates/stall2.html
+++ b/myproject/jumbotron/templates/stall2.html
@@ -45,19 +45,8 @@
           <div class="span5">
               <img src="../images/nus.jpeg" class="img-responsive" alt="Responsive image" width="30%" height=auto>
           </div> 
-          <a class="navbar-brand" href="/"> The Drunkards </a>
+          <a class="navbar-brand" href="/"> <font size="10" color="grey">The Drunkards</font> </a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
       </div>
     </nav>
 
@@ -66,7 +55,7 @@
       <div class="container">
         <h1 align="center">Salad Bar</h1>
         <p align="left">This is a web application for NUS Orbital 2016 Project Gemini.</p>
-        <p align="left"> Menu: Ribeye Steak (Signature dish)</p>
+        <p align="left"> Menu: Ribeye Steak (Signature dish) $5.00, Chicken Chop $3.00, Fish & Chips $3.00.</p>
       </div>
     </div>
 
@@ -83,7 +72,7 @@
        </div>
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
-          <p>-</p>
+          <p>1-for-1 side dishes at $1.00 each.</p>
         </div>
       </div>
 
