--- a/myproject/jumbotron/templates/stall1.html
+++ b/myproject/jumbotron/templates/stall1.html
@@ -64,10 +64,10 @@
       <div class="row">
         <div class="col-md-4">
           <h2 align="center">Items in queue:</h2>
-          <p><form action="/" method="post">
+          <p><form action="/" method="get">
         <fieldset>
     {% if curr_psi_limit %}
-          <p> Send me an email reminder of my pledge each time the PSI in Singapore exceeds <input class="input-small" type="number" name="psilimit" min="1" value="{{ curr_psi_limit }}"> for <input class="input-small" type="number" name="daylimit" min="1" max="{{ max_limit }}" value="{{ curr_day_limit }}"> consecutive days.</p>
+          <p> Send me an email reminder of my pledge each time the PSI in Singapore exceeds <input class="input-small" type="text" name="psilimit" min="1" value="{{ curr_psi_limit }}" > for <input class="input-small" type="number" name="daylimit" min="1" max="{{ max_limit }}" value="{{ curr_day_limit }}"> consecutive days.</p>
     {% else %}
     <p> Send me an email reminder of my pledge each time the PSI in Singapore exceeds <input class=" input-small" type="number" name="psilimit" min="1"> for <input class="input-small" type="number" name="daylimit" min="1" max="{{ max_limit }}"> consecutive days.</p>
     {% endif %}
@@ -80,6 +80,17 @@
        </div>
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
+          <form action="/" method="get">
+            <fieldset>
+            {% if text %}
+              Offers:<br>
+              <input type="text" name="firstname" value="{{ text }}"><br>
+            {% else %}
+              Offers:<br>
+              <input type="text" name="firstname" value="{{ text }}"><br>
+            {% endif %}
+            </fieldset>
+          </form>
           <p>-</p>
         </div>
       </div>
