--- a/myproject/jumbotron/templates/stall1_page.html
+++ b/myproject/jumbotron/templates/stall1_page.html
@@ -51,7 +51,7 @@
           <form class="navbar-form navbar-right">
             {% if user_nickname %}
               <div style="position:relative;left:400px"><font color="white"> {{ user_nickname }} </font><a class="btn btn-primary btn-lg" role="button" href="{{ logout }}">logout</a>
-                <li><a href="/stall1_page">Ayam Penyet</a></li>
+                <li><a href="/stall1_page"><form action="/stall1" method="get">{{ stall_name }}</form></a></li>
                 </div>  
             {% else %}
              <div><a class="btn btn-primary btn-lg" href="thedrunkards" role="button" style="position:relative;left:400px;top:8px">Login for stallholders</a>
@@ -66,11 +66,14 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1 align="center">Ayam Penyet</h1>
+        <p align="center"><form action="/stall1_page" method="post"> Stall name:
+        <input name="name">
+        <input type="submit" value="edit">
+        </form></p>
         <p align="left"> Edit Header Here: </p>
         <p align="left">(WE NEED TO CREATE A FORM SUBMISSION HERE) This is a web application for NUS Orbital 2016 Project Gemini.</p>
         <p align="left"> Edit Menu Here: </p>
-        <p align="left">(WE NEED TO CREATE A FORM SUBMISSION HERE) Menu: Dory Penyet $3.50, Ayam Penyet $4.00.</p>
+        <p align="left">Menu: Dory Penyet $3.50, Ayam Penyet $4.00.</p>
       </div>
     </div>
 
@@ -79,17 +82,6 @@
       <div class="row">
         <div class="col-md-4">
           <h2 align="center">Items in queue:</h2>
-          <form action="/stall1_page" method="post">
-        <fieldset>
-    {% if curr_psi_limit %}
-          <p> Send me an email reminder of my pledge each time the PSI in Singapore exceeds <input class="input-small" type="number" name="psilimit" min="1" value="{{ curr_psi_limit }}"> for <input class="input-small" type="number" name="daylimit" min="1" max="{{ max_limit }}" value="{{ curr_day_limit }}"> consecutive days.</p>
-          <p><input type="submit" value="Edit"></p>
-    {% else %}
-    <p> Send me an email reminder of my pledge each time the PSI in Singapore exceeds <input class=" input-small" type="number" name="psilimit" min="1"> for <input class="input-small" type="number" name="daylimit" min="1" max="{{ max_limit }}"> consecutive days.</p>
-          <p><input type="submit" value="Submit"></p>
-    {% endif %}
-        </fieldset>
-    </form>
           <p>(WE NEED TO CREATE A FORM SUBMISSION HERE)</p>
         </div>
         <div class="col-md-4">
@@ -98,19 +90,6 @@
        </div>
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
-          <form action="/stall1_page" method="post">
-            <fieldset>
-            {% if text %}
-              Offers:<br>
-              <input type="text" name="firstname" value="{{ text }}"><br>
-              <p><input type="submit" value="Edit"></p>
-            {% else %}
-              Offers:<br>
-              <input type="text" name="firstname" value="{{ text }}"><br>
-              <p><input type="submit" value="Submit"></p>
-            {% endif %}
-            </fieldset>
-          </form>
           <p>(WE NEED TO CREATE A FORM SUBMISSION HERE)</p>
         </div>
       </div>
