--- a/myproject/jumbotron/templates/stall1.html
+++ b/myproject/jumbotron/templates/stall1.html
@@ -67,11 +67,11 @@
         </div>
         <div class="col-md-4">
           <h2 align="center">Estimated waiting time (in minutes):</h2>
-          <p>0</p>
+          <p><form action="/stall1" method="get">{{ stall_time }}</form></p>
        </div>
         <div class="col-md-4">
           <h2 align="center">Special offers:</h2>
-          <p>-</p>
+          <p><form action="/stall1" method="get">{{ stall_menu }}</form></p>
         </div>
       </div>
 
